# cpptest

./: .clang-format  .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  example1.cpp
inc/: cpptest.hpp  cpptest_logger_abstract.hpp  cpptest_logger_console.hpp  cpptest_utils.hpp
src/: cpptest.cpp  cpptest_logger_abstract.cpp  cpptest_logger_console.cpp  cpptest_utils.cpp
